# SVGFiles

./: Cargo.toml  Data Instructions.txt  Instructions and Configuration.txt  README.md  clean_all.sh  run_all.sh  run_all_infantry.sh  run_copy_cached_files.sh  run_infantry.sh  run_miscellaneous.sh  run_nationality.sh  run_ordnance.sh  run_vehicles.sh
common_functions/: Cargo.toml
common_functions/src/: arguments.rs  armament.rs  armor.rs  colors.rs  common_record.rs  debugging.rs  defines.rs  lib.rs  machine_guns.rs  malfunction.rs  movement.rs  overrides.rs  special.rs  text.rs  text_field.rs  transport.rs  turret.rs  utils.rs
data/: aircraft.csv  allied_mmc.csv  allied_ordnance.csv  allied_smc.csv  allied_sw.csv  allied_vehicles.csv  american_mmc.csv  american_ordnance.csv  american_smc.csv  american_sw.csv  american_vehicles.csv  axis_mmc.csv  axis_ordnance.csv  axis_smc.csv  axis_sw.csv  axis_vehicles.csv  british_mmc.csv  british_ordnance.csv  british_smc.csv  british_sw.csv  british_vehicles.csv  chinese_mmc.csv  chinese_ordnance.csv  chinese_smc.csv  chinese_sw.csv  chinese_vehicles.csv  common_vehicles.csv  communist_mmc.csv  communist_ordnance.csv  communist_smc.csv  communist_sw.csv  communist_vehicles.csv  finnish_mmc.csv  finnish_ordnance.csv  finnish_smc.csv  finnish_sw.csv  finnish_vehicles.csv  french_mmc.csv  french_ordnance.csv  french_smc.csv  (+34 more)
generate_aircraft_counters/: Cargo.toml
generate_aircraft_counters/src/: main.rs
generate_landing_craft_counters/: Cargo.toml
generate_landing_craft_counters/src/: main.rs
generate_miscellaneous_counters/: Cargo.toml
generate_multiman_counters/: Cargo.toml
generate_ordnance_counters/: Cargo.toml
generate_singleman_counters/: Cargo.toml
generate_sw_counters/: Cargo.toml
generate_vehicle_counters/: Cargo.toml
(+40 files in other folders)
