[workspace]
members = [
	"common_functions",
	"generate_aircraft_counters",
	"generate_ordnance_counters",
	"generate_landing_craft_counters",
	"generate_miscellaneous_counters",
	"generate_multiman_counters",
	"generate_singleman_counters",
	"generate_sw_counters",
	"generate_vehicle_counters",
]
resolver = "2"

[workspace.package]
#name = "vasl_svg_counters"
version = "1.0.1"
edition = "2021"
authors = ["Gordon Molek", "Klas Malmström", "Alan Bills"]
description = "Tools to generate VASL vehicle and ordnance counters from CSV files of counter attributes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
csv = "1.1"
regex = "1.10.3"
serde = { version = "1", features = ["derive"] }
substring = "1.4.5"
