[package]
name = "common_functions"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
const_format = "0.2.33"
cosmic-text = "0.11.2"
regex.workspace = true
substring.workspace = true
clap = { version = "4.5.31", features = ["derive"] }
